<resources>
    <string name="app_name">MobileGraduale</string>
    <string name="welcome_message">Welcome to Mobile Graduale</string>
    <string name="daily_button_text">Today\'s Propers</string>
    <string name="browse_button_text">Browse Propers</string>
    <string name="votive_button_text">Votive Mass Propers</string>
    <string name="work_in_progress">A work in progress</string>
    <string name="current_calendar_date">First Sunday in Advent</string>
    <string name="introit_button_text">Introit</string>
    <string name="gradual_button_text">Gradual</string>
    <string name="alleluia_button_text">Alleluia</string>
    <string name="offertory_button_text">Offertory</string>
    <string name="communion_button_text">Communion</string>
    <string name="Error_Message_Chant">MODE(one) CLEF(do,1) Error Bad ChantID</string>
    <string name="Introit_Ad_te_levavi" translatable="false" part="introit">MODE(eight) CLEF(do,4) Ad(sol-,liq,re-) te(fa-) le-(sol-,la-) vá-(la-) vi(dot,sol-) BAR(quarter) á-(sol-,do,do) ni-(la-) mam(sol-,la-) me-(fa-,sol-) am_:(torc,sol-,la-,sol-,sol-,dot,fa-) BAR(half) De-(la-) us(do,do) me-(do,torc,do,re,do) us(dot,do,dot,re) BAR(quarter) in(fa-,liq,sol-) te(sol-) con-(fa-) fi-(fa-,la-,do,ti-) do,(h_epi,ti-,h_epi,la-) BAR(quarter) non(do,do,do) e-(la-,sol-) ru-(sol-,por,la-,fa-,sol-) bé-(torc,h_epi,sol-,h_epi,la-,h_epi,sol-) scam_:(dot,sol-) BAR(full) ne-(do) que(dot,do,do,do,do,torc,h_epi,la-,h_epi,ti-,h_epi,la-) ir-(la-) rí-(torc,do,re,do) de-(ti-,la-) ant(do,do,do) me(dot,sol-) BAR(quarter) in-(sol-) im-(sol-) í-(dot,sol-,la-,quil,ti-,do) ci(h_epi,do,la-) me-(h_epi,la-,fa-) i_:(dot,fa-) BAR(full) ét-(fa-,la-) e-(la-,sol-) nim(dot,sol-) u-(sol-) ni-(sol-) vér-(sol-,por,ti-,la-,ti-) si(dot,sol-) BAR(quarter) qui(sol-) te(sol-) ex-(torc,la-,do,ti-) spé-(ti-,torc,do,re,do) ctant(torc,la-,ti-,dot,la-) BAR(half) non(sol-,liq,la-) con-(la-) fun-(por,la-,fa-,la-,sol-) dén-(torc,h_epi,sol-,h_epi,la-,h_epi,sol-) tur.(dot,sol-) BAR(double) Ps. Vi-(sol-) as(la-,sol-) tu-(sol-,do) as,(do) Dó-(do) mi-(do) ne,(do) de-(do,ti-) món-(do,re) stra(re) mi-(do,re) hi_:(dot,do) BAR(full) et(do,liq,la-) sé-(la-,do,) mi-(do) tas(do) tu-(do) as(do,do,ti-) é-(sol-,la-) do-(do,ti-) ce(la-) me.(torc,h_epi,sol-,h_epi,la-,h_epi,re-,fa-,fa-,dot,sol-) BAR(double)</string>
    <string name="Gradual_Universi_qui_te_exspectant" translatable="false" part="gradual">MODE(one) CLEF(fa,3) U-(do) ni-(re) ver-(re,mi,sol,fa,re,mi,do,dot,la-,do,por,re,do,re) si_*(dot,re) BAR(quarter) qui(re,do) te(fa) ex-(sol,la) spé-(la) ctant,(h_epi,la,sol,h_epi,la,sol,h_epi,la,mi,h_epi,fa,h_epi,sol,h_epi,dot,fa) BAR(half) non(sol) con-(fa,liq,mi) fun-(do,re) dén-(fa,sol) tur,(mi,fa,sol,torc,fa,sol,fa,v_epi,mi) Dó-(re) mi-(torc,h_epi,re,h_epi,mi,h_epi,re) ne.(dot,re) BAR(quarter) _(do,re,fa,fa,dot,sol,la,te,v_epi,sol,mi,h_epi,torc,fa,sol,fa,fa,dot,re) BAR(double) CLEF(do,4) V. Vi-(re-,la-) as(la-) tu-(la-,sol-) as,(sol-,la-) Dó-(h_epi,sol-,fa-) mi-(h_epi,fa-,sol-) ne,(dot,la-,scand,fa-,sol-,la-,do,cliv,do,la-,scand,fa-,sol-,la-,do,cliv,do,la-,do,do,la-,sol-,do,re,do,re,do,dot,la-) BAR(quarter) _(scand,fa-,sol-,la-,do,cliv,do,la-,do,cliv,do,la-,te-,sol-,sol-,dot,fa-) BAR(full) no-(la-,re) tas(h_epi,re,do) fac(h_epi,do,mi,re,v_epi,do,cliv,re,do,cliv,do,dot,la-) BAR(quarter) mi-(cliv,la-,fa-,sol-,la-,do,cliv,do,la-,do,do,v_epi,la-,sol-,la-,quil,ti-,h_epi,do,ti-) hi(do,do,do,ti-,v_epi,la-,cliv,do,sol-,sol-,dot,fa-) BAR(full) et(fa-,liq,sol-) sé-(dot,sol-,la-,do,la-,sol-,cliv,sol-,fa-) mi-(sol-) tas(sol-) tu-(dot,la-,torc,fa-,sol-,fa-,mi-,v_epi,fa-,cliv,sol-,fa-,cliv,fa-,re-,cliv,mi-,do-) as(dot,do-) BAR(quarter) é-(fa-,fa-) do-(h_epi,sol-,fa-) ce(fa-,por,la-,sol-,la-) me.(la-,la-,sol-,v_epi,fa-,mi-,do-,re-,quil,mi-,fa-,dot,re-) BAR(double)</string>
    <string name="Alleluia_Ostende_nobis" translatable="false" part="alleluia">MODE(eight) CLEF(do,3) Al-(scand,fa-,sol-,la-) le-(h_epi,cliv,la-,sol-,la-,quil,ti-,do,ti-) lú-(la-,do,v_epi,do,do) ia.(do,re,do,v_epi,la-,cliv,la-,dot,sol-) BAR(half) _(ti-,do,sol-,la-,sol-,dot,fa-,la-,quil,ti-,do,cliv,do,ti-,torc,sol-,do,la-,cliv,ti-,la-,cliv,la-,dot,sol-) BAR(double) V. O-(do) stén-(dot,do,torc,ti-,re,do) de(do) no-(cliv,do,ti-) bis(ti-) Dó-(ti-,do,re,re,do,la-,por,do,la-,ti-) mi-(cliv,do,ti-) ne(dot,ti-) BAR(half) mi-(ti-) se-(ti-) ri-(cliv,ti-,la-) cór-(torc,do,mi,re) di-(do) am(ti-,do) tu-(h_epi,cliv,la-,sol-,do,do,ti-,dot,sol-) _(la-,te-,la-,dot,fa-,sol-,te-,v_epi,la-,sol-,cliv,la-,sol-) am_:(dot,sol-) BAR(full) et(sol-) sal-(sol-) lu-(sol-) tá-(por,la-,sol-,do) re(dot,do) tu-(por,do,la-,v_epi,do,ti-,sol-,la-,do,v_epi,la-,fa-) _(te-,la-,sol-,dot,la-,do,do,scand,do,re,mi,do,dot,la-) BAR(quarter) _(torc,h_epi,ti-,h_epi,re,h_epi,ti-,re,do,ti-,cliv,do,dot,sol-) _(h_epi,cliv,la-,sol-,h_epi,cliv,te-,sol-,te-,la-,sol-,cliv,la-,fa-) um(dot,fa-) BAR(half) da(cliv,la-,fa-,sol-,la-) no-(cliv,do,ti-,por,do,la-,do) bis.(ti-,do,la-,dot,sol-) BAR(quarter) _(fa-,la-,do,v_epi,la-,sol-,dot,fa-,la-,quil,ti-,do,ti-,do,ti-,la-,dot,ti-,torc,sol-,ti-,v_epi,la-,ti-,sol-,fa-,torc,sol-,la-,dot,sol-) BAR(quarter) _(do,do,la-,sol-,la-,te-,sol-,dot,fa-) _(do,do,v_epi,la-,sol-,h_epi,torc,la-,neut,ti-,la-,la-,dot,sol-) BAR(double)</string>
    <string name="Offertory_Ad_te_Domine_levavi" translatable="false" part="offertory">MODE(two) CLEF(fa,3) Ad(la-) te(do,re,do,por,re,do,re,fa,fa,cliv,h_epi,fa,mi) Dó-(re) mi-(re,mi,fa,mi,re,mi) ne(cliv,dot,mi,dot,re) BAR(half) le-(h_epi,cliv,re,do,scand,re,quil,mi,fa) vá-(fa) vi(cliv,mi,re) á-(fa,fa,fa,v_epi,re,do,re,fa,fa,fa) ni-(re) mam(re,por,mi,do,re) me-(torc,h_epi,re,h_epi,mi,h_epi,re) am_:(dot,re) BAR(full) De-(fa) us(fa) me-(torc,fa,sol,fa,fa) us,(h_epi,cliv,mi,re) BAR(quarter) in(re,liq,do) te(re) con-(re,liq,do) fí-(re,fa,v_epi,mi,do) do,(cliv,dot,re,dot,do) BAR(half) non(fa,fa,sol) e-(fa) ru-(fa,por,sol,mi,fa) be-(torc,h_epi,fa,h_epi,sol,h_epi,fa) scam_:(dot,fa) BAR(full) ne-(fa,fa) que(cliv,h_epi,fa,mi) ir-(fa,fa,fa) rí-(re) de-(scand,do,quil,mi,fa,mi,re) ant(torc,re,mi,re) me(dot,re) BAR(quarter) in-(do) i-(mi) mí-(h_epi,cliv,sol,fa) ci(fa) me-(h_epi,cliv,fa,re,mi,re,do,re) i_:(cliv,dot,re,dot,do) BAR(full) ét-(cliv,re,do) e-(torc,re,mi,re) nim(cliv,re,la-) BAR(quarter) u-(torc,do,re,do) ni-(re) vér-(torc,re,sol,liq,fa) si(fa,sol) qui(cliv,fa,mi) te(re) ex-(do) spé-(torc,do,re,do) ctant,(por,h_epi,la-,fa-,dot,la-) BAR(half) non(do,re) con-(do,re) fun-(re,quil,mi,fa,cliv,sol,mi,h_epi,cliv,fa,mi) dén-(re,mi,fa,mi,re,mi) tur.(cliv,dot,mi,dot,re) BAR(double)</string>
    <string name="Communion_Dominus_dabit_benignitatem" translatable="false" part="communion">MODE(one) CLEF(do,4) Do-(fa-,fa-) mi-(torc,fa-,la-,sol-) nus_*(sol-,la-,v_epi,fa-,mi-,fa-,mi-,re-,do-,dot,re-,dot,do-) BAR(quarter) da-(fa-,fa-) bit(fa-,fa-,sol-) be-(cliv,fa-,re-) ni-(fa-) gni(sol-,la-) tá-(la-,do,re,do,la-) tem_:(dot,la-) BAR(full) et(la-) ter-(torc,sol-,la-,sol-) ra(mi-,fa-) no-(sol-,la-,cliv,la-,sol-) stra(dot,sol-) BAR(half) da-(dot,la-,torc,fa-,la-,sol-,la-,v_epi,fa-,mi-,re-) bit(torc,re-,fa-,re-,re-,dot,do-) BAR(quarter) fru-(fa-,sol-) ctum(h_epi,cliv,mi-,re-,fa-,sol-,fa-,mi-,fa-) su-(h_epi,re-,h_epi,mi-,h_epi,re-) um(dot,re-) BAR(double)</string>
    <string name="Introit_Populus_Sion" translatable="false" part="introit">MODE(seven) CLEF(do,3) Po-(sol-,do,do,re) pu-(do) lus(do) Si-(do,re) on,_*(por,do,ti-,dot,do) BAR(half) ec-(do,por,re,do,re) ce(dot,sol-) Dó-(dot,sol-,la-,quil,ti-,do,do,re) mi-(do) nus(do) vé-(do,re) ni-(cliv,re,ti-,cliv,re,do) et(dot,do) BAR(quarter) ad(dot,re,torc,do,re,ti-) sal-(la-,liq,sol-) ván-(torc,ti-,do,ti-) das(la-,ti-) gen-(h_epi,torc,sol-,h_epi,la-,h_epi,sol-) tes_:(dot,sol-) BAR(full) et(sol-) au-(sol-,do) dí-(do,do,re) tam(re) fá-(por,fa,mi,fa,re) ci-(re) et(re) Dó-(re,mi) mi-(por,re,do,re) nus(dot,re,do,re,do,dot,la-) gló-(scand,do,v_epi,re,mi) ri-(cliv,mi,re,fa,mi,re) am(re,liq,mi) vo-(dot,mi,re,quil,mi,fa) cis(cliv,h_epi,mi,re) su-(torc,h_epi,re,h_epi,mi,h_epi,re) ae,(dot,re) BAR(half) in(sol-) lae-(sol-) tí-(scand,sol-,v_epi,la-,do) a(do,re,mi,cliv,mi,re) cor-(ti-,do,re,mi,v_epi,re,do) dis(cliv,re,do,cliv,do,la-,quil,ti-,do) ve-(torc,h_epi,sol-,h_epi,la-,h_epi,sol-) stri.(dot,sol-) BAR(double) Ps. Qui(torc,sol-,do,ti-) re-(do,re) gis(re) Is-(re) ra-(re) el,(re,fa) in-(mi) tén-(mi,liq,re) de_:(dot,re,dot,mi) BAR(full) qui(cliv,re,ti-) de-(do,re) dú-(re) cis(re) vel-(re) ut(re,quil,mi,fa) ov-(v_epi,re) em(do) Io-(do,do,do) seph.(dot,la-,dot,sol-) BAR(double)</string>
    <string name="Gradual_Ex_Sion" translatable="false" part="gradual">MODE(five) CLEF(do,3) Ex(fa-) SI-(la-,do) on_*(h_epi,cliv,do,la-,do,ti-,sol-,torc,la-,do,la-,cliv,la-,dot,fa-) BAR(half) spé-(cliv,h_epi,la-,fa-,sol-,la-,quil,ti-,do,do,re) ci-(do) es(scand,do,re,v_epi,mi,re,dot,do,ti-,do,ti-,dot,la-) BAR(half) de-(la-,por,do,ti-,do) có-(h_epi,cliv,la-,sol-) ris(la-,quil,ti-,do) e-(h_epi,sol-,liq,fa-) ius_:(fa-,la-,sol-,do,do,cliv,do,la-,por,la-,sol-,dot,la-) BAR(full) De-(la-,do,cliv,re,do) us(cliv,do,ti-,re,mi,re,dot,do,ti-,do,ti-,dot,la-) BAR(half) man-(la-) ni(cliv,do,ti-) fé-(cliv,h_epi,do,la-,do,ti-,v_epi,sol-,la-) ste(h_epi,fa-,sol-) vé-(scand,fa-,sol-,la-,scand,dot,do,re,mi,do,dot,la-,ti-,do,la-,dot,sol-) BAR(quarter) _-(la-,por,do,sol-,la-) ni-(fa-) et.(torc,sol-,la-,sol-,torc,la-,do,la-,la-,torc,h_epi,fa-,h_epi,sol-,dot,h_epi,fa-) BAR(double) V. Con-(fa-) gre-(la-) gá-(cliv,do,la-,do,cliv,do,la-,do,cliv,do,la-,do,do,mi,re,dot,do,la-,do,do,mi,re,v_epi,do,cliv,re,do,v_epi,do,cliv,do,la-) BAR(quarter) _-(te-,la-,sol-,la-,sol-,fa-,dot,la-,do,do,v_epi,la-,sol-,la-) te(dot,la-) BAR(half) il-(la-,do) li(h_epi,do,ti-) san-(scand,la-,ti-,do) ctos(torc,h_epi,sol-,h_epi,la-,h_epi,fa-,cliv,h_epi,la-,sol-,la-,te-,la-,sol-) e-(torc,h_epi,fa-,h_epi,sol-,liq,h_epi,fa-) ius,(dot,fa-) BAR(full) qui(fa-) or-(sol-,liq,la-) di-(la-) na-(por,do,la-,ti-,sol-) vé-(la-,do,do,do) runt(dot,do,cliv,re,do,ti-,do,la-,dot,sol-) BAR(quarter) _(torc,h_epi,do,h_epi,re,h_epi,do,cliv,do,re,ti-,do,la-,dot,sol-)  BAR(half) _(la-,por,do,ti-,do,re,do,dot,la-,cliv,h_epi,do,ti-,torc,do,re,dot,la-,cliv,h_epi,do,ti-,sol-,la-,ti-,cliv,ti-,dot,la-) BAR(full) te-(scand,la-,v_epi,do,re) sta-(cliv,h_epi,do,ti-) mén-(scand,la-,ti-,do) tum(h_epi,cliv,sol-,fa-) e-(por,la-,fa-,la-,sol-,fa-,cliv,h_epi,la-,fa-,sol-,la-,quil,ti-,v_epi,do,re,liq,do) ius(cliv,do,ti-,re,mi,re,dot,do,ti-,do,ti-,dot,la-) BAR(half) su-(scand,la-,v_epi,do,re) per(do,liq,ti-) sa-(scand,la-,v_epi,ti-,do) cri-(sol-,la-) fi-(por,do,la-,te-,sol-) ci-(fa-) a.(fa-,sol-,te-,la-,h_epi,te-,do) BAR(quarter) _(la-,te-,v_epi,sol-,fa-,h_epi,torc,sol-,la-,sol-,cliv,sol-,dot,fa-) BAR(double)</string>
    <string name="Alleluia_Laetatus_sum" translatable="false" part="alleluia">MODE(one) CLEF(do,4) Al-(re-,liq,do-) le-(fa-) lú-(por,sol-,fa-,te-) ia.(dot,la-) BAR(quarter) _(torc,te-,do,v_epi,te-,torc,la-,te-,dot,sol-,fa-,sol-,torc,la-,do,la-,cliv,la-,dot,sol-) BAR(quarter) _(torc,fa-,la-,sol-,dot,mi-,torc,re-,mi-,dot,do-,mi-,fa-,sol-,sol-,fa-,re-,torc,quil,mi-,fa-,dot,re-) BAR(double) V. Lae-(re-) tá-(cliv,fa-,re-,cliv,re-,do-,fa-,sol-) tus(torc,fa-,la-,sol-,la-,te-) sum(dot,la-) BAR(quarter) in(la-) his(la-) quae(la-) di-(la-,do,v_epi,la-,sol-,dot,fa-,mi-,sol-,por,la-,sol-,la-) cta(fa-,sol-) sunt(mi-,liq,fa-) mi-(re-,mi-,fa-,mi-,re-,mi-) hi_:(dot,mi-,dot,re-) BAR(full) in(do-,liq,re-) do-(re-,fa-,torc,mi-,fa-,dot,re-,do-,re-,cliv,fa-,re-,la-,cliv,la-,sol-,cliv,sol-,fa-,torc,h_epi,la-,h_epi,do,h_epi,la-) mum(dot,la-) BAR(half) Dó-(torc,h_epi,fa-,h_epi,sol-,h_epi,re-,dot,fa-,torc,mi-,fa-,re-,fa-,sol-,la-,cliv,la-,sol-) mi-(torc,mi-,sol-,fa-,fa-) ni(dot,fa-,dot,mi-) BAR(half) í-(re-,fa-,fa-,fa-,torc,sol-,la-,fa-) bi-(sol-,te-) mus.(dot,la-,torc,ti-,do,v_epi,ti-,torc,la-,ti-,dot,sol-,fa-,sol-,torc,la-,do,la-,la-,dot,sol-) BAR(quarter) _(torc,fa-,la-,sol-,dot,mi-,torc,re-,mi-,dot,do-,mi-,fa-,sol-,sol-,fa-,v_epi,re-,quil,mi-,fa-,dot,re-) BAR(double)</string>
</resources>